--- a/前端/themes/csslider.default.css
+++ b/前端/themes/csslider.default.css
@@ -45,8 +45,8 @@
   position: relative;
   /*width: 820px;
   height: 420px;*/
-  width: 960px;
-  height: 620px;
+  width: 950px;
+  height: 595px;
   z-index: 1;
   font-size: 0;
   line-height: 0;
@@ -243,10 +243,14 @@
   margin-top: 40px;
   text-align: center;/*居中*/
 } 
-/*.but{
-    width: 100%;
-    margin-top: 20px;
-}*/
+.csslider > .but2 {
+  clear: both;
+  position: absolute;
+  z-index: 10;
+  margin-bottom: -10px;
+  margin-top: 5px;
+  text-align: center;/*居中*/
+} 
 
 .button{ 
     width: 180px;
@@ -261,3 +265,18 @@
     background-color: #ffffff;
     color: black;
 }
+
+.button2{ 
+    width: 50px;
+    height: 30px;
+    border-radius: 8px;
+    background-color: #3a3a3a;
+    color: #ffffff;
+    border: 2px solid #ffffff;
+}
+
+.button2:hover {
+    background-color: #ffffff;
+    color: black;
+}
+
